https://www.pivotaltracker.com/story/show/116335503 - More significant UI changes leading up to April launch. New look based on mockups from Movember.

--- a/portal/templates/about.html
+++ b/portal/templates/about.html
@@ -2,11 +2,8 @@
 {% block main %}
 {% from "flask_user/_macros.html" import back_btn %}
 
-<div class="portal-well well">
 
-  {{ back_btn(PORTAL,'Home') }}
-
-  <h3 class="tnth-headline">About TrueNTH</h3>
+  <h3 class="tnth-headline">TrueNTH</h3>
 
   <p>Lorem ipsum dolor sit met, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna a liqua. Ut enim ad minim venom, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comido consequat. Luis aute irure dolor in reprehenderit in voluptate relit esse cillim dolore eu fuggita nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit animé id est labour.</p>
 
@@ -16,6 +13,5 @@
 
   <p>Lorem ipsum dolor sit met, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna a liqua. Ut enim ad minim venom, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comido consequat. Luis aute irure dolor in reprehenderit in voluptate relit esse cillim dolore eu fuggita nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit animé id est labour.</p>
 
-</div>
 
 {% endblock %}
