--- a/portal/templates/flask_user/forgot_password.html
+++ b/portal/templates/flask_user/forgot_password.html
@@ -3,19 +3,17 @@
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_submit_field, back_btn %}
 
-<div class="portal-well well">
 
-    {{ back_btn('user/sign-in','Sign In') }}
+{{ back_btn('user/sign-in','Log In') }}
 
-    <h2>{%trans%}Forgot Password{%endtrans%}</h2>
-    <br />
+<h1 class="tnth-headline">{%trans%}Forgot Your Password?{%endtrans%}</h1>
 
-    <form action="" method="POST" class="form" role="form">
-        {{ form.hidden_tag() }}
-        {{ render_field(form.email, tabindex=10) }}
-        {{ render_submit_field(form.submit, tabindex=90) }}
-    </form>
-
-</div>
+<p>Enter your e-mail address and we'll send an e-mail with a link to reset your password.</p>
+<br />
+<form action="" method="POST" class="form" role="form">
+    {{ form.hidden_tag() }}
+    {{ render_field(form.email, tabindex=10, label="Your e-mail address", label_visible=false ) }}
+    {{ render_submit_field(form.submit, tabindex=90) }}
+</form>
 
 {% endblock %}
