--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1,11 +1,19 @@
-/* TrueNTH Shared services portal CSS
+/** TrueNTH Shared services portal CSS
  * Uses Bootstrap framework
- */
+ *
+ * = Font sizing =
+ * Baseline font sizes: body: 18px, headlines: 24px, subheads: 22px, form fields: 18px, buttons: 18px, smaller-text: 14px
+ * > 992 font sizes: body: 24px, headlines 32px, subheads: 29px, form fields: 18px, buttons: 18px, smaller-text: 14px
+ *
+ * = Colors =
+ *
+ **/
 body {
   margin: 0;
   background-color: #FFF;
   font-family: "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   color: #333;
+  font-size: 18px;
 }
 a {
   color: #497856;
@@ -14,13 +22,19 @@ a:hover,
 a:active {
   color: #2a4531;
 }
-.portal-container {
-  background-image: url('../img/bg_canoe_opaque.jpg');
-  background-size: cover;
-  background-position: center top;
+.btn {
+  font-size: 18px;
 }
 .tnth-headline {
-  margin-top: 0;
+  text-transform: uppercase;
+  margin: 30px 0 20px;
+  font-size: 24px;
+}
+.tnth-subhead {
+  font-size: 22px;
+}
+.smaller-text {
+  font-size: 14px;
 }
 .feature-btn {
   transition: all 0.2s ease-in-out 0s;
@@ -36,46 +50,65 @@ a:active {
   color: #fff;
   background-color: #000;
 }
-.feature-btn-secondary {
-  color: #fff;
-}
-.feature-btn-secondary:hover,
-.feature-btn-secondary:active {
-  color: #fff;
-  background-color: #000;
-}
-.feature-container {
+#fullSizeBox {
   position: relative;
   margin: 0 -15px;
+  text-align: left;
+  background-image: url('../img/bg_canoe.jpg');
+  background-size: cover;
+  background-position: center top;
 }
-.feature-container > img {
-  width: 100%;
-  max-height: 1000px;
+#fullSizeBox.box-min-500 {
+  min-height: 500px;
 }
-.feature-box {
+#fullSizeBox.box-min-400 {
+  min-height: 400px;
+}
+#fullSizeContainer {
   position: absolute;
-  top: 5%;
+  top: 0;
   left: 0;
-  text-align: center;
   width: 100%;
+  height: 100%;
+  padding: 18px 0 18px;
+}
+#fullSizeLogo {
+  height: 70px;
+}
+#wellContainer {
+  height: 100%;
+  padding: 18px 18px 70px;
+}
+.tnth-well {
+  margin: 0;
+  padding: 18px;
+  background-color: rgba(255, 255, 255, 0.7);
+  color: #000000;
+  height: 100%;
+  text-align: center;
+  position: relative;
+}
+.tnth-well .form-group {
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.tnth-splash {
   color: #fff;
-  padding: 0 0.5em;
+  height: 100%;
+  text-align: center;
+  position: relative;
 }
-.feature-box .logo img {
-  width: 140px;
-  margin-bottom: 60px;
-}
-.feature-box .headline {
+.tnth-splash .headline {
   font-size: 20px;
   line-height: 1.1;
 }
-.feature-box .feature-btn-primary {
+.tnth-splash .feature-btn-primary {
   margin-top: 0.5em;
-  font-size: 18px;
   font-weight: bold;
   padding: 6px 24px;
 }
-.feature-bottom {
+.tnth-splash-bottom {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -84,47 +117,83 @@ a:active {
   color: #fff;
   margin-bottom: 10px;
 }
-.band-box {
-  position: absolute;
-  top: 5%;
-  left: 0;
-  text-align: center;
-  width: 100%;
+.tnth-splash-bottom-link {
   color: #fff;
-  padding: 0 0.5em;
-}
-.band-box .headline {
+  padding: 8px;
   font-size: 20px;
-  line-height: 1.1;
 }
-.portal-box {
-  margin: 0 -20px;
-  background-color: #83887c;
-  padding: 1em;
+.tnth-splash-bottom-link.separator {
+  margin: 0 12px;
+  border-left: 1px solid #fff;
+  padding-left: 0;
+  padding-right: 0;
 }
-.portal-box h4 {
-  color: #c8c5b6;
+.tnth-splash-bottom-link:hover,
+.tnth-splash-bottom-link:active,
+.tnth-splash-bottom-link:focus {
+  color: #ddd;
+}
+#wellContent {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.tnth-splash #wellContent {
+  width: 100%;
+}
+.btn-set {
+  margin-bottom: 1.5em;
+}
+.btn-set .btn {
+  margin-bottom: 0.5em;
+}
+.form-control {
+  font-size: 18px;
+  height: 39px;
+}
+.form-group .help-block {
+  font-size: 16px;
+}
+.profile-img {
+  float: right;
+  margin-top: -70px;
+}
+.profile-img img {
+  width: 90px;
+  border-radius: 45px;
+}
+.portal-item {
+  margin: 2em 0 3em;
+}
+.img-with-text {
+  position: relative;
+}
+.text-on-img {
+  position: absolute;
+  left: 0;
+  padding: 0.5em 1em;
+}
+.text-on-img.text-bot {
+  bottom: 0;
 }
 #homeFooter {
   overflow: auto;
-  padding: 1em 0;
+  padding-top: 1em;
+  padding-bottom: 1em;
   line-height: 1.2;
   display: none;
+  text-align: left;
 }
-.portal-well {
-  margin: 1em 0 2em;
-  background-color: #fff;
-  background: #ffffff;
-  /* Fall-back for browsers that don't support rgba */
-  background: rgba(255, 255, 255, 0.8);
-}
-.portal-well form label {
-  font-weight: normal;
+.footer-separate {
+  margin-top: 2em;
+  border-top: 1px solid #ccc;
+  padding-top: 1em;
 }
 .btn-tnth-primary {
   color: #fff;
-  background-color: #3d6548;
-  border-color: #33553d;
+  background-color: #79815D;
+  border-color: #79815D;
   transition: all 0.3s ease-in-out 0s;
   -webkit-transition: all 0.3s ease-in-out 0s;
 }
@@ -138,7 +207,7 @@ a:active {
 }
 .btn-tnth-back {
   color: #777;
-  margin: -1em 0 1em -6px;
+  padding: 0 5px 0 0;
 }
 .separator-horizontal,
 .separator-vertical {
@@ -209,80 +278,151 @@ a:active {
 }
 /** Responsive sizes **/
 @media (max-width: 480px) {
-  .feature-box {
-    top: 4%;
-  }
-  .feature-box .logo img {
-    width: 120px;
-    margin-bottom: 60px;
-  }
-  .feature-bottom {
-    position: inherit;
-    padding: 10px 0;
-    background-color: #000;
-  }
-  .feature-bottom .feature-btn-secondary:hover,
-  .feature-bottom .feature-btn-secondary:active {
-    color: #000;
-    background-color: #fff;
-  }
   #footerLockup {
     max-height: 80px;
   }
-}
-@media (max-width: 380px) {
-  .feature-box .logo img {
-    margin-bottom: 20px;
-  }
-  .portal-well {
-    margin: 1em -15px 1em;
-    border-radius: 0;
+  #homeFooter {
+    font-size: 14px;
+    padding-top: 0.5em;
   }
 }
 @media (min-width: 768px) {
-  .feature-box {
-    top: 7%;
-    padding: 0 1em;
-  }
-  .feature-box .logo img {
-    width: 200px;
-    margin-bottom: 140px;
-  }
-  .feature-box .headline {
-    font-weight: bold;
-    font-size: 32px;
-  }
-  .feature-box .feature-btn-primary {
-    margin-top: 1em;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 6px 24px;
-  }
-  .band-box {
-    top: 45%;
-    padding: 0 1em;
-  }
-  .band-box .headline {
-    font-size: 32px;
-  }
-  .feature-btn-secondary {
-    font-size: 18px;
-  }
-  .feature-bottom {
-    margin-bottom: 40px;
-  }
   #saveMsg {
     margin-left: 1em;
   }
+  #fullSizeBox {
+    background-image: none;
+    min-height: auto;
+  }
+  #fullSizeBox > img {
+    width: 100%;
+  }
+  #fullSizeContainer {
+    padding: 24px 0;
+  }
+  #wellContainer {
+    padding: 24px 24px 80px;
+  }
+  #fullSizeLogo {
+    height: 80px;
+  }
+  .tnth-well {
+    padding: 24px;
+  }
+  .tnth-splash .headline {
+    font-weight: bold;
+    font-size: 28px;
+  }
+  .tnth-splash .feature-btn-primary {
+    margin-top: 1em;
+    font-weight: bold;
+    padding: 6px 24px;
+    font-size: 22px;
+  }
 }
 @media (min-width: 992px) {
-  .portal-well {
-    min-height: 300px;
+  /** Font sizes changes above 992 **/
+  body {
+    font-size: 24px;
+  }
+  .tnth-headline {
+    font-size: 32px;
+  }
+  .tnth-subhead {
+    font-size: 29px;
+  }
+  /** Unless explicitly wrapped in reduce-font-sizes class **/
+  body .reduce-font-sizes {
+    font-size: 18px;
+  }
+  .reduce-font-sizes .tnth-headline {
+    font-size: 24px;
+  }
+  .reduce-font-sizes .tnth-subhead {
+    font-size: 22px;
+  }
+  #fullSizeContainer {
+    padding: 30px 0;
+  }
+  #wellContainer {
+    padding: 30px 30px 90px;
+  }
+  #fullSizeLogo {
+    height: 90px;
+  }
+  .tnth-well {
+    padding: 30px;
+  }
+  .btn-set {
+    margin-bottom: 2em;
+  }
+  .btn-set .btn {
+    margin-bottom: 1em;
+  }
+  .tnth-splash .headline {
+    font-size: 32px;
+  }
+  .pos-bottom-md {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
+  .pos-bottom-md .btn {
+    margin: 0 0 15px 15px;
   }
 }
 @media (min-width: 1200px) {
-  .portal-well {
-    min-height: 400px;
+  #fullSizeContainer {
+    padding: 60px 0 60px;
+  }
+  #wellContainer {
+    padding: 60px 60px 100px;
+  }
+  #fullSizeLogo {
+    height: 100px;
+  }
+  .tnth-well {
+    padding: 60px;
+  }
+  .tnth-splash .headline {
+    margin: 2em 0;
+  }
+  .profile-img {
+    margin-top: -100px;
+  }
+  .profile-img img {
+    width: 120px;
+    border-radius: 60px;
+  }
+}
+@media (min-width: 1400px) {
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+  }
+  #mainHolder.vertical-center {
+    display: table;
+    height: 100%;
+    margin: 0 auto;
+  }
+  #mainHolder.vertical-center #mainDiv {
+    display: table-cell;
+    text-align: center;
+    /* horizontal */
+    vertical-align: middle;
+    /* vertical */
+  }
+  #fullSizeBox {
+    margin: 0 auto;
+    max-width: 1400px;
+  }
+  #homeFooter {
+    max-width: 1400px;
+    margin: 0 auto;
+  }
+  #homeFooter.footer-separate {
+    margin-top: 2em;
   }
 }
 /*** https://github.com/lipis/bootstrap-social ***/
@@ -300,7 +440,7 @@ a:active {
   top: 0;
   bottom: 0;
   width: 32px;
-  line-height: 34px;
+  line-height: 39px;
   font-size: 1.6em;
   text-align: center;
   border-right: 1px solid rgba(0, 0, 0, 0.2);
