--- a/portal/templates/admin.html
+++ b/portal/templates/admin.html
@@ -1,35 +1,34 @@
 {% extends "layout.html" %}
 {% block main %}
 
-<div class="portal-well well">
-    <h3 class="tnth-headline">User Administration</h3>
+<h1 class="tnth-headline">User Administration</h1>
 
-    <p id="profileIntro">Select any user to view details or make changes.</p>
+<p id="profileIntro">Select any user to view details or make changes.</p>
 
-    <div class="table-responsive">
-        <table class="table table-striped table-bordered table-hover table-condensed">
-            <thead>
-                <tr>
-                    <th>Username</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Email</th>
-                    <th>Roles</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for user in users %}
-                <tr>
-                    <td><a href="{{ url_for('.profile', user_id=user.id) }}">{{ user.username }}</a></td>
-                    <td>{{ user.first_name if user.first_name }}</td>
-                    <td>{{ user.last_name if user.last_name }}</td>
-                    <td>{{ user.email if user.email }}</td>
-                    <td>{{ user.rolelist }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
+<div class="table-responsive smaller-text">
+    <table class="table table-striped table-bordered table-hover table-condensed">
+        <thead>
+            <tr>
+                <th>Username</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+                <th>Roles</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for user in users %}
+            <tr>
+                <td><a href="{{ url_for('.profile', user_id=user.id) }}">{{ user.username }}</a></td>
+                <td>{{ user.first_name if user.first_name }}</td>
+                <td>{{ user.last_name if user.last_name }}</td>
+                <td>{{ user.email if user.email }}</td>
+                <td>{{ user.rolelist }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 </div>
+
 
 {% endblock %}
