--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -9,9 +9,10 @@
             {% for e in field.errors %}
                 <span class="help-block">{{ e }}</span>
             {% endfor %}
-        {% endif %}
-        {% if helpText %}
+        {% else %}
+            {% if helpText %}
             <span class="help-block">{{ helpText|safe }}</span>
+            {% endif %}
         {% endif %}
     </div>
 {%- endmacro %}
@@ -48,7 +49,7 @@
 {%- endmacro %}
 
 {% macro back_btn(url,text) -%}
-<a href="{{PORTAL}}/{{url}}" class="btn btn-xs btn-tnth-back"><i class="fa fa-chevron-left"></i> Back to {{text}}</a><br/>
+<a href="{{PORTAL}}/{{url}}" class="btn btn-xs btn-tnth-back"><small><i class="fa fa-chevron-left"></i> Back to {{text}}</small></a><br/>
 {%- endmacro %}
 
 {% macro left_nav(current_user) -%}
@@ -81,25 +82,24 @@
 </div>
 {%- endmacro %}
 
-{% macro footer() -%}
-<div id="homeFooter">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-12">
-                <p><a href="{{PORTAL}}/about">About TrueNTH</a></p>
+{% macro footer(splash_style=false) -%}
+<div id="homeFooter"
+     {% if splash_style %}
+        class="container-fluid"
+     {% else %}
+        class="container footer-separate"
+     {% endif %}
+>
+    <div class="row">
+        <div class="col-xs-6">
+            <p><a href="{{PORTAL}}/about">Contact</a> | <a href="{{PORTAL}}/about">About</a> | <a href="{{PORTAL}}/terms-of-use">Legal</a></p>
+        </div>
+        <div class="col-xs-6">
+            <div class="pull-right">
+                <a href="http://us.movember.com" title="Movember"><img id="footerLockup" src="{{PORTAL}}{{url_for('static',filename='img/logo_movember_lockup.png')}}" /></a>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-6">
-                <p style="margin-top: 4px" class="text-muted"><small>PRIVACY POLICY Lorem ipsum dolor sit met, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna a liqua. Ut enim ad minim venom, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comido consequat. Luis aute irure dolor in reprehenderit in voluptate relit esse cillim dolore eu fuggita nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit animé id est labour.</p>
-            </div>
-            <div class="col-sm-6">
-                <div class="pull-right">
-                    <a href="http://us.movember.com" title="Movember"><img id="footerLockup" src="{{PORTAL}}{{url_for('static',filename='img/logo_movember_lockup.png')}}" /></a>
-                </div>
-            </div>
-        </div>
-
     </div>
+
 </div>
 {%- endmacro %}
