--- a/portal/templates/about.html
+++ b/portal/templates/about.html
@@ -13,5 +13,8 @@
 
   <p>Lorem ipsum dolor sit met, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna a liqua. Ut enim ad minim venom, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comido consequat. Luis aute irure dolor in reprehenderit in voluptate relit esse cillim dolore eu fuggita nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit animé id est labour.</p>
 
-
+  {% if config.version %}
+  <br />
+  <div class="pull-right text-muted smaller-text">TrueNTH Version: {{ config.version }}</div>
+  {% endif %}
 {% endblock %}
