As per https://www.pivotaltracker.com/projects/1225464/stories/115964431 changed "Central Services" to "TrueNTH" in visible strings.

--- a/portal/templates/client_add.html
+++ b/portal/templates/client_add.html
@@ -4,9 +4,9 @@
 
     {{ back_btn('clients','Client Applications') }}
 
-    <h3 class="tnth-headline">Obtain OAuth 2.0 Credentials from Central Services</h3><br />
+    <h3 class="tnth-headline">Obtain OAuth 2.0 Credentials from TrueNTH</h3><br />
 
-    <p>To add an application to Central Services, one must first register the application origin or URL.  Multiple origins may be entered, separated by white space.</p>
+    <p>To add an application to TrueNTH, one must first register the application origin or URL.  Multiple origins may be entered, separated by white space.</p>
 
     <form action="/client" method="post">
         {{ form.hidden_tag() }}
