--- a/portal/templates/client_edit.html
+++ b/portal/templates/client_edit.html
@@ -5,7 +5,7 @@
 
     {{ back_btn('clients','Client Applications') }}
 
-    <h1 class="tnth-headline">Central Services OAuth 2.0 Credentials</h1>
+    <h1 class="tnth-headline">TrueNTH OAuth 2.0 Credentials</h1>
 
     <p><strong>App ID:</strong><br />{{ client.client_id }}</p>
 
