--- a/portal/templates/clients_list.html
+++ b/portal/templates/clients_list.html
@@ -3,7 +3,7 @@
 
 
 
-    <h1 class="tnth-headline">Central Services OAuth 2.0 Client Applications</h1>
+    <h1 class="tnth-headline">TrueNTH OAuth 2.0 Client Applications</h1>
 
     <div style="margin: 2em 1em 3em">
         <a class="btn-tnth-primary btn" href="{{ url_for('.client') }}">Create A New TrueNTH Client Application</a>
